Closed
Bug 126463
Opened 23 years ago
Closed 23 years ago
Occurances of uninitialized variables being used before being set (in extensions/transformiix).
Categories
(Core :: XSLT, defect, P3)
Core
XSLT
Tracking
()
VERIFIED
FIXED
mozilla1.2alpha
People
(Reporter: mozilla-bugs, Assigned: peterv)
References
Details
(Whiteboard: [fixinhand])
Attachments
(1 file, 1 obsolete file)
3.88 KB,
patch
|
peterv
:
review+
jst
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
This bug is just for the warnings in various source files in
extensions/transformiix/source. Currently
(http://tinderbox.mozilla.org/SeaMonkey/warn1014136200.29882.html - Tue, 19 Feb
2002 11:30 EST) TBox shows the following warnings:
extensions/transformiix/source/xml/parser/nsSyncLoader.cpp:235
`class txLoadListenerProxy * proxy' might be used uninitialized in this function
extensions/transformiix/source/xpath/ExprParser.cpp:75
`UNICODE_CHAR endLiteral' might be used uninitialized in this function
extensions/transformiix/source/xpath/XPathProcessor.cpp:49
`class nsISupports * foundInterface' might be used uninitialized in this function
extensions/transformiix/source/xpath/nsNodeSet.cpp:47
`class nsISupports * foundInterface' might be used uninitialized in this function
extensions/transformiix/source/xslt/XSLTProcessor.cpp:169
`class nsISupports * foundInterface' might be used uninitialized in this function
extensions/transformiix/source/xslt/functions/txFormatNumberFunctionCall.cpp:122
`UNICODE_CHAR c' might be used uninitialized in this function
Reporter | ||
Comment 1•23 years ago
|
||
Bug 59652 is the meta-bug tracking the fight against these (potentially very
nasty) warnings.
P.S. Trying to make sure that 1.0 has as little warnings as possible.
Blocks: 59652
Keywords: mozilla1.0
Assignee | ||
Comment 2•23 years ago
|
||
class nsISupports * foundInterface should be filed on the macro
NS_IMPL_QUERY_HEAD. I'll attach a patch for the others.
Assignee: kvisco → peterv
OS: Linux → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla1.0
Assignee | ||
Comment 3•23 years ago
|
||
+ nsCOMPtr<nsIDOMEventReceiver> target = do_QueryInterface(DOMDocument, &rv);
+ NS_ENSURE_SUCCESS(rv, rv);
don't check the error-value from do_QI, NS_ENSURE_TRUE(target) instead (at
least that's what i've been told is the "right" way)
with that, r=sicking
Comment on attachment 70432 [details] [diff] [review]
Fix some warnings
(no need for new patch)
Attachment #70432 -
Flags: review+
once but 92929 is fixed this shouldn't be a problem ;-)
Comment 7•23 years ago
|
||
Moving Netscape owned 0.9.9 and 1.0 bugs that don't have an nsbeta1, nsbeta1+,
topembed, topembed+, Mozilla0.9.9+ or Mozilla1.0+ keyword. Please send any
questions or feedback about this to adt@netscape.com. You can search for
"Moving bugs not scheduled for a project" to quickly delete this bugmail.
Target Milestone: mozilla1.0 → mozilla1.2
Looks like proxy is the only unitialized var left and it looks like it could
well be real, so it would be nice to have the fix for this...
I have a fix for 'class nsISupports * foundInterface' stuff.
Whiteboard: [fixinhand]
Assignee | ||
Comment 9•23 years ago
|
||
Attachment #70432 -
Attachment is obsolete: true
Assignee | ||
Comment 10•23 years ago
|
||
Comment on attachment 74522 [details] [diff] [review]
Fix v2
Moving the r=sicking
Attachment #74522 -
Flags: review+
Comment 11•23 years ago
|
||
Comment on attachment 74522 [details] [diff] [review]
Fix v2
sr=jst
Attachment #74522 -
Flags: superreview+
Comment 12•23 years ago
|
||
Comment on attachment 74522 [details] [diff] [review]
Fix v2
a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #74522 -
Flags: approval+
Assignee | ||
Comment 13•23 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 14•23 years ago
|
||
Verifying, currently
(http://tinderbox.mozilla.org/SeaMonkey/warn1016552220.1515.html - Tue, 19 Mar
2002 10:37 EST) I do not see any such warnings in extensions/transformiix. Thanks!
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 15•22 years ago
|
||
This have regressed - bug 113611 checkin have added 4 new "might be used
uninitialized" warnings in extensions/transformiix:
+extensions/transformiix/source/xslt/Numbering.cpp:80
+ `enum txNodeTypeTest::NodeType nodetype' might be used uninitialized in this
function
+
+extensions/transformiix/source/xslt/ProcessorState.cpp:194
+ `double priority' might be used uninitialized in this function
+
+extensions/transformiix/source/xslt/ProcessorState.cpp:513
+ `MBool hasAttr' might be used uninitialized in this function
+
+extensions/transformiix/source/xslt/ProcessorState.cpp:555
+ `MBool hasAttr' might be used uninitialized in this function
Comment 16•22 years ago
|
||
This is not a regression, but new occurences.
The code is safe though, I will fix the warnings later on, in a different bug.
Reporter | ||
Comment 17•22 years ago
|
||
Axel, two of the warnings are still there:
extensions/transformiix/source/xslt/Numbering.cpp:80
`enum txNodeTypeTest::NodeType nodetype' might be used uninitialized in this
function
extensions/transformiix/source/xslt/ProcessorState.cpp:234
`double priority' might be used uninitialized in this function
Comment 18•22 years ago
|
||
The first one should be part of bug 94036, the second one is wrong anyway.
Anyway, this bug is not about those. The ones that this bug was about have been
fixed.
You need to log in
before you can comment on or make changes to this bug.
Description
•