Fix for bug 126463 (Occurances of uninitialized variables being used before being set (in extensions/transformiix).) r=sicking, sr=jst, a=asa.